--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,5 @@ MigrationBackup/
 
 # End of https://www.gitignore.io/api/visualstudio
 
+Mood_Busters/obj/Release/Mood_Busters.csproj.CoreCompileInputs.cache
+Mood_Busters/Mood_Busters.csproj
