Alter .gitignore a bit. Nothing important.

--- a/.gitignore
+++ b/.gitignore
@@ -314,7 +314,7 @@ __pycache__/
 
 # Cake - Uncomment if you are using it
 # tools/**
-# !tools/packages.config
+ !tools/packages.config
 
 # Tabs Studio
 *.tss
@@ -354,5 +354,4 @@ MigrationBackup/
 
 # End of https://www.gitignore.io/api/visualstudio
 
-Mood_Busters/obj/Release/Mood_Busters.csproj.CoreCompileInputs.cache
 Mood_Busters/Mood_Busters.csproj
