--- a/Mood Busters/Mood Busters.csproj
+++ b/Mood Busters/Mood Busters.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IErrorHandler.cs" />
     <Compile Include="IRecognitionApi.cs" />
     <Compile Include="Key.cs" />
     <Compile Include="Program.cs" />
