--- a/Mood_Busters/Mood_Busters.csproj
+++ b/Mood_Busters/Mood_Busters.csproj
@@ -89,6 +89,11 @@
     <Compile Include="Key.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringConst.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StringConst.resx</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MBWindow.resx">
       <DependentUpon>MBWindow.cs</DependentUpon>
     </EmbeddedResource>
@@ -101,6 +106,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="StringConst.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>StringConst.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
