--- a/Mood_Busters/App.config
+++ b/Mood_Busters/App.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+
+  <appSettings>
+    <add key="Key0" value="AKIA4ZMSQDX2XMY6EG64"/>
+    <add key="Key1" value="qFx64vQ3tWhHZfFFbm7ybhR3JzYN6DT6o9A889OZ"/>
+  </appSettings>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+
 </configuration>
