--- a/Mood_Busters/Mood_Busters.csproj
+++ b/Mood_Busters/Mood_Busters.csproj
@@ -82,9 +82,12 @@
     <Compile Include="MBWindow.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ErrorHandlerAndroid.cs" />
+    <Compile Include="ErrorHandlerWindows.cs" />
     <Compile Include="MBWindow.Designer.cs">
       <DependentUpon>MBWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="IErrorHandler.cs" />
     <Compile Include="IRecognitionApi.cs" />
     <Compile Include="Key.cs" />
     <Compile Include="Program.cs" />
