--- a/Mood_Busters/Mood_Busters.csproj
+++ b/Mood_Busters/Mood_Busters.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="AmazonRekognitionApi.cs" />
     <Compile Include="ImageLinkToMemStream.cs" />
+    <Compile Include="IRegex.cs" />
     <Compile Include="MBWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +89,7 @@
     <Compile Include="IRecognitionApi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegexStringCheck.cs" />
     <Compile Include="StringConst.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
