--- a/Mood_Busters/Mood_Busters.csproj
+++ b/Mood_Busters/Mood_Busters.csproj
@@ -78,7 +78,6 @@
     <Compile Include="BoundingBoxPainter.cs" />
     <Compile Include="BoundingBoxPainterWindows.cs" />
     <Compile Include="CameraBox.cs" />
-    <Compile Include="Interfaces\ICamera.cs" />
     <Compile Include="ImageUploadDialog.cs" />
     <Compile Include="Interfaces\IImageSaver.cs" />
     <Compile Include="SaveFileDialog.cs" />
@@ -91,9 +90,6 @@
     <Compile Include="MBWindow.Designer.cs">
       <DependentUpon>MBWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="Interfaces\IErrorHandler.cs" />
-    <Compile Include="Interfaces\IRecognitionApi.cs" />
-    <Compile Include="Mood.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegexStringCheck.cs" />
@@ -149,6 +145,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\save.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MoodBustersLibrary\MoodBustersLibrary.csproj">
+      <Project>{cb44753d-a71a-4bc7-94cd-3c4818b6a94d}</Project>
+      <Name>MoodBustersLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
