--- a/Mood_Busters/packages.config
+++ b/Mood_Busters/packages.config
@@ -3,6 +3,8 @@
   <package id="AWSSDK.Core" version="3.3.103.39" targetFramework="net472" />
   <package id="AWSSDK.Rekognition" version="3.3.101.15" targetFramework="net472" />
   <package id="EmguCV" version="3.1.0.1" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
   <package id="OpenTK" version="1.1.2225.0" targetFramework="net472" />
   <package id="OpenTK.GLControl" version="1.1.2225.0" targetFramework="net472" />
   <package id="ZedGraph" version="5.1.5" targetFramework="net472" />
