Update web service implementation to work with Windows app

--- a/MoodBustersWebAPI/Web.config
+++ b/MoodBustersWebAPI/Web.config
@@ -5,6 +5,10 @@
   -->
 <configuration>
     <appSettings>
+
+        <add key="Key0" value="AKIA4ZMSQDX2XMY6EG64"/>
+        <add key="Key1" value="qFx64vQ3tWhHZfFFbm7ybhR3JzYN6DT6o9A889OZ"/>
+      
         <add key="webpages:Version" value="3.0.0.0" />
         <add key="webpages:Enabled" value="false" />
         <add key="ClientValidationEnabled" value="true" />
