--- a/MoodBustersWebAPI/MoodBustersWebAPI.csproj
+++ b/MoodBustersWebAPI/MoodBustersWebAPI.csproj
@@ -46,11 +46,13 @@
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
-    <Reference Include="AWSSDK.Core">
-      <HintPath>..\packages\AWSSDK.Core.3.3.103.39\lib\MonoAndroid10\AWSSDK.Core.dll</HintPath>
+    <Reference Include="AWSSDK.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\AWSSDK.Core.3.3.103.39\lib\netstandard2.0\AWSSDK.Core.dll</HintPath>
     </Reference>
-    <Reference Include="AWSSDK.Rekognition">
-      <HintPath>..\packages\AWSSDK.Rekognition.3.3.101.15\lib\MonoAndroid10\AWSSDK.Rekognition.dll</HintPath>
+    <Reference Include="AWSSDK.Rekognition, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\AWSSDK.Rekognition.3.3.101.15\lib\netstandard2.0\AWSSDK.Rekognition.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
