--- a/Mood_Busters/App.config
+++ b/Mood_Busters/App.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Mood_Busters.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <appSettings>
     <add key="Key0" value="AKIA4ZMSQDX2XMY6EG64"/>
     <add key="Key1" value="qFx64vQ3tWhHZfFFbm7ybhR3JzYN6DT6o9A889OZ"/>
@@ -11,4 +16,23 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
 
+  <userSettings>
+    <Mood_Busters.Properties.Settings>
+      <setting name="R2" serializeAs="String">
+        <value>180</value>
+      </setting>
+      <setting name="G2" serializeAs="String">
+        <value>180</value>
+      </setting>
+      <setting name="B2" serializeAs="String">
+        <value>255</value>
+      </setting>
+      <setting name="A2" serializeAs="String">
+        <value>255</value>
+      </setting>
+      <setting name="color_bool" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </Mood_Busters.Properties.Settings>
+  </userSettings>
 </configuration>
