Config file usage
Added few string for database connection to app.config.
Last used saving and loading image paths are remembered using user config.

--- a/Mood_Busters/App.config
+++ b/Mood_Busters/App.config
@@ -1,14 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 
+  <configSections>
+      <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+          <section name="Mood_Busters.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      </sectionGroup>
+  </configSections>
   <appSettings>
     <add key="Key0" value="AKIA4ZMSQDX2XMY6EG64"/>
     <add key="Key1" value="qFx64vQ3tWhHZfFFbm7ybhR3JzYN6DT6o9A889OZ"/>
     <add key="webServiceUrl" value="https://localhost:44388/api/mood"/>
+	<add key="save_dataURL" value="http://ingvarasgalinskas.000webhostapp.com/mood_busters/save_data.php" />
+	<add key="load_dataURL" value="http://ingvarasgalinskas.000webhostapp.com/mood_busters/load_data.php" />
   </appSettings>
 
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
 
+<userSettings>
+    <Mood_Busters.Properties.Settings>
+        <setting name="LastMood" serializeAs="String">
+            <value />
+        </setting>
+        <setting name="SavingPath" serializeAs="String">
+            <value />
+        </setting>
+        <setting name="LoadingPath" serializeAs="String">
+            <value />
+        </setting>
+    </Mood_Busters.Properties.Settings>
+  </userSettings>
 </configuration>
