--- a/.gitignore
+++ b/.gitignore
@@ -368,4 +368,4 @@ MigrationBackup/
 
 Mood_Busters/bin/
 Mood_Busters/App.config
-MoodBusters/MoodBustersWebAPI/Web.config
+MoodBustersWebAPI/Web.config
